--- a/static/css/challenges.css
+++ b/static/css/challenges.css
@@ -1,3 +1,8 @@
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 /* Andrew cool css */
 body > main {
     display: flex;
@@ -7,6 +12,7 @@ body > main {
     height: 100%;
     justify-content: center;
     padding: 0;
+    flex: 1;
 }
 
 /* Section styling */
