--- a/templates/solves.html
+++ b/templates/solves.html
@@ -14,6 +14,9 @@
         main > * {
             margin-bottom: 1em;
         }
+        #scroll-container {
+            overflow-x: auto;
+        }
         h2 {
             padding-bottom: var(--spacing);
         }
@@ -26,40 +29,42 @@
             <h2>Solve History</h2>
             <a href="javascript:window.scrollTo(0, document.body.scrollHeight);">Jump to bottom &darr;</a>
         </div>
-        <table>
-            <thead>
-                <tr>
-                    <th>Solver</th>
-                    <th></th>
-                    <th>Challenge</th>
-                    <th>Category</th>
-                    <th>Difficulty</th>
-                    <th>Points</th>
-                    <th>Time</th>
-                </tr>
-            </thead>
-
-            <tbody>
-                {% for solve in solves %}
-                    <tr {% if solve.user.username == current_user.username %}
-                        class="highlight"
-                        {% endif %}
-                        >
-                        <td>{{ solve.user.username }}</td>
-                        {% if solve.id in first_blood %}
-                        <td title="First blood">🏆</td>
-                        {% else %}
-                        <td></td>
-                        {% endif %}
-                        <td>{{ challenges[solve.challenge_id].name }}</td>
-                        <td>{{ challenges[solve.challenge_id].category }}</td>
-                        <td>{{ challenges[solve.challenge_id].difficulty }}</td>
-                        <td>{{ challenges[solve.challenge_id].points }}</td>
-                        <td><time datetime="{{ solve.time }}">{{ solve.time | time_ago }}</time></td>
+        <div id="scroll-container">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Solver</th>
+                        <th></th>
+                        <th>Challenge</th>
+                        <th>Category</th>
+                        <th>Difficulty</th>
+                        <th>Points</th>
+                        <th>Time</th>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+
+                <tbody>
+                    {% for solve in solves %}
+                        <tr {% if solve.user.username == current_user.username %}
+                            class="highlight"
+                            {% endif %}
+                            >
+                            <td>{{ solve.user.username }}</td>
+                            {% if solve.id in first_blood %}
+                            <td title="First blood">🏆</td>
+                            {% else %}
+                            <td></td>
+                            {% endif %}
+                            <td>{{ challenges[solve.challenge_id].name }}</td>
+                            <td>{{ challenges[solve.challenge_id].category }}</td>
+                            <td>{{ challenges[solve.challenge_id].difficulty }}</td>
+                            <td>{{ challenges[solve.challenge_id].points }}</td>
+                            <td><time datetime="{{ solve.time }}">{{ solve.time | time_ago }}</time></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </section>
 
     <section class="card">
