Make `link-row` wrap
The link row will now wrap its contents if necessary (i.e. smaller
screens).

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -170,4 +170,7 @@ div.link-row {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    flex-wrap: wrap;
+    gap: 0.2em;
+    padding-bottom: var(--spacing);
 }
