--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,6 +11,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+
+    <script data-username="{{ displayed_user.username }}" data-datapoints='{{ graph_datapoints|tojson }}'
+        src="{{ url_for('static', filename='js/profile.js') }}"></script>
 {% endblock %}
 
 {% block body %}
@@ -53,132 +56,4 @@
             <p>No solves yet :(</p>
         {% endif %}
     </section>
-
-    <script>
-        $(document).ready(function() {
-            // Prepare data for the score chart
-            let times = [];
-            let points = [];
-
-            {% for datapoint in graph_datapoints %}
-            times.push("{{ datapoint.time }}");
-            points.push({{ datapoint.points }});
-            {% endfor %}
-
-            let userColor = getUserColor('{{ displayed_user.username }}');
-
-
-            let ctx = document.getElementById('score-history').getContext('2d');
-            let chart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: times,
-                    datasets: [{
-                        label: '{{ displayed_user.username }}',
-                        data: points,
-                        stepped: "before",
-
-                        backgroundColor: userColor,
-                        borderColor: userColor,
-
-                        fill: false,
-                    }]
-                },
-                options: {
-                    scales: {
-                        x: {
-                            type: 'time',
-                            ticks: {
-                                color: '#FFFFFF' // White color for ticks
-                            },
-                        },
-                        y: {
-                            beginAtZero: true,
-                            ticks: {
-                                color: '#FFFFFF', // White color for ticks
-                            },
-                            grid: {
-                                color: 'rgba(255,255,255,0.1)' // Lighter grid lines against a dark background
-                            },
-                            title: {
-                                display: true,
-                                text: 'Score',
-                                color: '#FFFFFF' // Ensuring the title is also white
-                            }
-                        }
-                    },
-                    responsive: true,
-                    maintainAspectRatio: false,
-                    plugins: {
-                        legend: {
-                            position: 'top',
-                            labels: {
-                                color: '#FFFFFF' // White color for legend text
-                            },
-                            // Disable legend click behaviour
-                            // https://github.com/chartjs/Chart.js/issues/2190#issuecomment-203444324
-                            onClick: (event, legendItem, legend) => {}
-                        }
-                    },
-                    layout: {
-                        padding: {
-                            x: 20,
-                            y: 0
-                        }
-                    },
-                    backgroundColor: '#333333'
-                }
-            });
-        });
-
-        // Gets a predictable user color for each username
-        function getUserColor(username) {
-            let color = '#';
-            let seed = 0;
-
-            // Go through the username and do some bit flipping and flopping
-            for (let i = 0; i < username.length; i++) {
-                seed = username.charCodeAt(i) + ((seed << 6) + 2 * seed);
-
-                // XOR shift
-                seed ^= seed >> 7;
-                seed ^= seed << 11;
-                seed ^= seed << 17;
-            }
-
-            // 3 hex values
-            for (let i = 0; i < 3; i++) {
-                // Flip-flop around some more
-                let value = (seed >> i) & 0xFF;
-
-                // Convert the number to hex
-                color += ('00' + value.toString(16)).slice(-2);
-            }
-
-            // If the color is too dark, run the hash function again
-            if (isDark(color)) {
-                return getUserColor(username + 'a');
-            }
-
-            // And our color is created!
-            return color;
-        }
-
-        // Credit: https://stackoverflow.com/questions/596216/formula-to-determine-perceived-brightness-of-rgb-color
-        function isDark(hex) {
-            const r = parseInt(hex.slice(1, 3), 16) / 255;
-            const g = parseInt(hex.slice(3, 5), 16) / 255;
-            const b = parseInt(hex.slice(5, 7), 16) / 255;
-
-            // Calculate perceived luminance according to ITU-R BT.709
-            const luminance = 0.2126 * r + 0.7152 * g + 0.0722 * b;
-            console.log(luminance);
-            if (luminance < 0.4) {
-                console.log("Retrying");
-            }
-            return luminance < 0.3;
-        }
-
-
-    </script>
 {% endblock %}
