--- a/static/css/entry.css
+++ b/static/css/entry.css
@@ -6,8 +6,7 @@
 #login-section h1 {
     text-align: center;
     color: var(--purple-1); /* Purple accent for the title */
-    font-size: 24px; /* Larger font size for visibility */
-    margin-bottom: 30px; /* More space below the header */
+    margin-bottom: 1em; /* More space below the header */
 }
 
 #login-section form {
@@ -17,24 +16,24 @@
 
 #login-section input[type="text"],
 #login-section input[type="password"] {
-    padding: 15px; /* Comfortable padding */
-    margin-bottom: 15px; /* Adequate spacing between fields */
+    padding: 1em; /* Comfortable padding */
+    margin-bottom: 1em; /* Adequate spacing between fields */
     border: 1px solid var(--form-field-border-color); /* Darker border to match the outer border */
     background-color: var(--bg-color); /* Consistent dark theme for input fields */
     color: #ccc; /* Lighter text for readability */
     border-radius: 5px; /* Soft rounded corners for the inputs */
-    font-size: 16px; /* Increased font size for ease of reading */
+    font-size: 1em; /* Increased font size for ease of reading */
 }
 
 #login-section input[type="submit"] {
-    padding: 15px; /* Generous padding for a substantial button */
+    padding: 1em; /* Generous padding for a substantial button */
     color: white;
     background-color: var(--purple-1); /* Purple accent color */
     border: none;
     border-radius: 5px; /* Consistent radius with other elements */
     cursor: pointer;
     transition: background-color 0.3s;
-    font-size: 16px; /* Larger text for a bold statement */
+    font-size: 1em; /* Larger text for a bold statement */
 }
 
 #login-section input[type="submit"]:hover {
@@ -43,9 +42,9 @@
 
 #login-section p {
     color: #ccc; /* Light grey color for readability against the dark background */
-    font-size: 14px; /* Slightly smaller font size for less emphasis compared to input fields */
+    font-size: 0.9em; /* Slightly smaller font size for less emphasis compared to input fields */
     text-align: center; /* Center-align text for consistency with the form's alignment */
-    margin-top: 20px; /* Spacing above the paragraph to separate it from the form */
+    margin-top: 1.25rem; /* Spacing above the paragraph to separate it from the form */
 }
 
 #login-section a {
