--- a/templates/register.html
+++ b/templates/register.html
@@ -16,7 +16,7 @@
     <section class="card" id="login-section">
         <h1>Sign Up</h1>
         <form id="signup-form" action="/register" method="POST">
-            <input type="text" name="username" placeholder="Username:" required="required"> <br>
+            <input type="text" name="username" placeholder="Username:" required="required">
             <input type="password" name="password" placeholder="Password:" required="required">
             <input type="submit" value="Sign Up">
 
