--- a/templates/login.html
+++ b/templates/login.html
@@ -17,8 +17,8 @@
     <section class="card" id="login-section">
         <h1>Login</h1>
         <form id="login-form" action="/login" method="POST">
-            <input type="text" name="username" placeholder="Username:" required="required" autocapitalize="none">
-            <input type="password" name="password" placeholder="Password:" required="required">
+            <input type="text" name="username" placeholder="Username" required="required" autocapitalize="none">
+            <input type="password" name="password" placeholder="Password" required="required">
             <input type="submit" value="Log in">
 
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
