Automatically focus username input on entry forms

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
     <section class="card" id="login-section">
         <h1>Login</h1>
         <form id="login-form" action="/login" method="POST">
-            <input type="text" name="username" placeholder="Username" required="required" autocapitalize="none">
+            <input type="text" name="username" placeholder="Username" required="required" autocapitalize="none" autofocus>
             <input type="password" name="password" placeholder="Password" required="required">
             <input type="submit" value="Log in">
 
