Defer all JavaScript execution

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     {% block head %}
         <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
         <!-- jQuery 3.7.1 -->
-        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer></script>
     {% endblock %}
 </head>
 
