--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -7,10 +7,10 @@
 
     <!-- Sweet alert -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js" defer></script>
     <!-- as lazy as normal alerts, better than you could make them yourself -->
 
-    <script src="{{ url_for('static', filename='js/challenges.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/challenges.js') }}" defer></script>
 {% endblock %}
 
 {% block body %}
