--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -8,16 +8,16 @@
     <!-- Sweet alert 2 -->
     <!-- as lazy as normal alerts, better than you could make them yourself -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js" defer></script>
 
 
 
     <!-- Chart.js 3.5.1 with date-fns adapter -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js" defer></script>
 
-    <script data-username="{{ user.username }}" src="{{ url_for('static', filename='js/leaderboard.js') }}"></script>
+    <script data-username="{{ user.username }}" src="{{ url_for('static', filename='js/leaderboard.js') }}" defer></script>
 {% endblock %}
 
 {% block body %}
