--- a/templates/login.html
+++ b/templates/login.html
@@ -7,10 +7,10 @@
 
     <!-- Sweet alert -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" />
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>    <!-- as lazy as normal alerts, better than you could make them yourself -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js" defer></script>    <!-- as lazy as normal alerts, better than you could make them yourself -->
 
     <script {% if login_msg %} data-login_msg {% endif %}
-        src="{{ url_for('static', filename='js/login.js') }}"></script>
+        src="{{ url_for('static', filename='js/login.js') }}" defer></script>
 {% endblock %}
 
 {% block body %}
