--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,12 +8,12 @@
 
 
     <!-- Chart.js 3.5.1 with date-fns adapter -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js" defer></script>
 
     <script data-username="{{ displayed_user.username }}" data-datapoints='{{ graph_datapoints|tojson }}'
-        src="{{ url_for('static', filename='js/profile.js') }}"></script>
+        src="{{ url_for('static', filename='js/profile.js') }}" defer></script>
 {% endblock %}
 
 {% block body %}
