Make profile solves table section into a card
This is more consistent with the leaderboard page, where the tables are
placed inside of cards.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,7 +28,7 @@
         <canvas id="score-history"></canvas>
     </div>
 
-    <section id="recent-solves">
+    <section class="card" id="recent-solves">
         <h2>Solves</h2>
         {% if solves %}
             <table class="solves-table">
