Add missing difficulties to frontend

--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -42,6 +42,8 @@
                     <option value="easy">easy</option>
                     <option value="medium">medium</option>
                     <option value="hard">hard</option>
+                    <option value="insane">insane</option>
+                    <option value="not ok">not ok</option>
                 </select>
                 <div>
                     <input type="checkbox" name="solved" id="solved" />
