Remove `User.score`
We now dynamically calculate the user's score based on their solves,
thus preventing the score from desyncing if challenge point values are
adjusted after they have been solved.

--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -19,7 +19,7 @@
     <div id="flag-section-container">
         <section id="flag-section">
             <h1>Welcome {{ current_user.username }}!</h1>
-            <p>You have {{ current_user.score }} points.</p>
+            <p>You have {{ score }} points.</p>
 
             <h2>Filter Challenges</h2>
             <p><span id="visible-count">{{ unsolved_count }}</span> / {{ challenges|length }} challenge(s) visible</p>
