--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,7 +21,7 @@
     <section id="user-profile-card">
         <h2 id="username-heading">{{ displayed_user.username }}</h2>
         <h2>Rank {{ rank }}</h2>
-        <h2>{{ displayed_user.score }} Points</h2>
+        <h2>{{ score }} Points</h2>
     </section>
 
     <div id="chart-container">
