--- a/templates/register.html
+++ b/templates/register.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js" defer></script>    <!-- as lazy as normal alerts, better than you could make them yourself -->
 
+    <script src="{{ url_for('static', filename='js/utils.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/register.js') }}" defer></script>
 {% endblock %}
 
