--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -69,7 +69,8 @@
         <p>{{ unsolved_count }} challenge(s) left to solve</p>
 
         {% for id, challenge in challenges.items()|sort(attribute='1.points') %}
-            <article class="card challenge" data-category="{{ challenge.category }}"
+            <article class="card challenge" id="chall-{{ id|urlencode }}"
+                     data-category="{{ challenge.category }}"
                      data-difficulty="{{ challenge.difficulty }}"
                      {% if solves[id]|map(attribute='user.username')|select('eq', current_user.username)|list %}
                          data-solved style="display: none;"
@@ -78,7 +79,12 @@
                 <!-- Challenge info -->
                 <header>
                     <div>
-                        <h2>{{ challenge.name }} </h2>
+                        <h2>{{ challenge.name }}
+                            <a href="#chall-{{ id | urlencode }}" title="Link to this challenge">
+                                {# SVG from https://feathericons.com #}
+                                <svg xmlns="http://www.w3.org/2000/svg" width="0.8em" height="0.8em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-link"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg>
+                            </a>
+                        </h2>
                         <p class="author">{{ challenge.author }}</p>
                     </div>
 
