Make challenges list more responsive
This commit ensures that embedded images in challenge descriptions do
not overflow the page, and that challenge text can be forcefully
wrapped, if necessary.

--- a/static/css/challenges.css
+++ b/static/css/challenges.css
@@ -108,6 +108,10 @@ svg.feather-link:hover {
     background-color: var(--purple-1);
 }
 
+.challenge .description img {
+    max-width: 100%;
+}
+
 
 
 .solves-count {
@@ -119,6 +123,7 @@ svg.feather-link:hover {
     padding: 15px;
     margin-top: 10px;
     border-left: 5px solid var(--purple-2); /* Stylish left border */
+    overflow-wrap: anywhere;
 }
 
 
