Hotfix: anchor link button appears after "solved"
On solved challenges, the anchor link icon now appears after the
"(Solved)" text.

--- a/static/css/challenges.css
+++ b/static/css/challenges.css
@@ -132,11 +132,11 @@ svg.feather-link:hover {
     border-left-color: #339900;
 }
 
-#challenge-list .challenge[data-solved] h2 {
+#challenge-list .challenge[data-solved] h2 > span {
     color: darkgrey;
 }
 
-#challenge-list .challenge[data-solved] h2::after {
+#challenge-list .challenge[data-solved] h2 > span::after {
     content: ' (Solved)';
 }
 
