--- a/templates/index.html
+++ b/templates/index.html
@@ -7,16 +7,26 @@
 {% endblock %}
 
 {% block body %}
-    <section class="card" id="welcome">
+    <section class="card small" id="welcome">
         <h1>Welcome to SaintCTF</h1>
         <p>Please sign up <a href="/register">here</a>!</p>
     </section>
 
-    <section class="card" id="what-is-ctf">
+    <section class="card large" id="what-is-ctf">
         <p>If you are new to CTFs, then here's an explanation:</p>
         <p>A CTF is a cybersecurity competition, where teams compete to solve as many challenges as they can, as fast as possible.</p>
         <p>Challenges range across several categories, such as Crypto(graphy), reverse engineering, and web exploitation.</p>
         <p>Wikipedia explains it better than I can <a href="https://en.wikipedia.org/wiki/Capture_the_flag_(cybersecurity)">here</a></p>
+    </section>
+
+    <section class="card small" id="statistics">
+        <h1>Statistics</h1>
+        <ul>
+            <li>{{ stats["challenges"] }} challenges</li>
+            <li>{{ stats["solves"] }} solves</li>
+            <li>{{ stats["players"] }} players</li>
+            <li>{{ stats["points"] }} points (total)</li>
+        </ul>
     </section>
     <footer>
         <p>©Ning, Alex, Andrew, 2024</p>
