Add heading to `what-is-ctf` card on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
     </section>
 
     <section class="card large" id="what-is-ctf">
+        <h1>What's a CTF?</h1>
         <p>If you are new to CTFs, then here's an explanation:</p>
         <p>A CTF is a cybersecurity competition, where teams compete to solve as many challenges as they can, as fast as possible.</p>
         <p>Challenges range across several categories, such as Crypto(graphy), reverse engineering, and web exploitation.</p>
