Add 'getting started' card to home page
A list of tools is provided to assist players.

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,18 @@
         <p>Wikipedia explains it better than I can <a href="https://en.wikipedia.org/wiki/Capture_the_flag_(cybersecurity)">here</a></p>
     </section>
 
+    <section class="card large" id="getting-started">
+        <h1>Where do I get started?</h1>
+        <p>There are many ways to get started with a CTF &mdash; you'll get the most out of it just by trying!</p>
+        <p>Just searching for things will get you further than you think in a CTF, especially if it's an unfamiliar topic &mdash; your search engine is your friend.</p>
+
+        <p>Here are some tools to get you started:</p>
+        <h2 id="tools">Tools</h2>
+        <ul>
+            <li><a href="https://gchq.github.io/CyberChef">CyberChef</a> &mdash; The Swiss Army knife of cybersecurity tools</li>
+        </ul>
+    </section>
+
     <section class="card small" id="statistics">
         <h1>Statistics</h1>
         <ul>
