Add additional paragraph about rules to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <section class="card small" id="welcome">
         <h1>Welcome to SaintCTF</h1>
         <p>Please sign up <a href="/register">here</a>!</p>
+        <p>Make sure to read the <a href="{{ url_for('rules') }}">rules</a> before competing in any <a href="{{ url_for('challenges') }}">challenges</a>!</p>
     </section>
 
     <section class="card large" id="what-is-ctf">
