Add help card to home page with challenge sample
We further modularise the challenges CSS to allow for custom challenge
`<main>` elements with a class (`challenge-main`), and attach an excerpt
of the challenge list into the help card, to increase user immersion and
help players understand the mechanics of the CTF platform.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -32,7 +32,29 @@ main p:last-child {
     flex: 2 1 10em;
 }
 
-footer {
+#help main {
+    padding-top: 0.5em;
+}
+
+/* increased specificity */
+#help #flag-section, #help #challenge-list {
+    padding-top: 1em;
+}
+
+#help #challenge-list {
+    border-radius: 1em; /* More cohesive appearance */
+}
+
+#help .challenge {
+    text-align: initial; /* Reset text alignment */
+}
+
+#help .filter-tags {
+    flex-wrap: wrap; /* Force wrapping */
+    justify-content: flex-end; /* Align tags to the right */
+}
+
+main > footer {
     flex-basis: 100%;
     background-color: var(--form-field-border-color);
 }
