--- a/static/css/challenges.css
+++ b/static/css/challenges.css
@@ -4,15 +4,18 @@ body {
 }
 
 /* Andrew cool css */
-body > main {
+body > main, .challenge-main {
     display: flex;
     flex-direction: row-reverse;
     flex-wrap: wrap;
     align-items: stretch;
-    height: 100%;
     justify-content: center;
     padding: 0;
     flex: 1;
+}
+
+body > main {
+    height: 100%;
 }
 
 /* Section styling */
