--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,9 @@
         <section class="card large" id="what-is-ctf">
             <h1>What's a CTF?</h1>
             <p>If you are new to CTFs, then here's an explanation:</p>
-            <p>A Capture the Flag (CTF) is a cybersecurity competition, where teams compete to solve as many challenges as they can, as fast as possible.</p>
-            <p>Challenges range across several categories, such as Crypto(graphy), reverse engineering, and web exploitation.</p>
-            <p>Wikipedia explains it better than I can <a href="https://en.wikipedia.org/wiki/Capture_the_flag_(cybersecurity)">here</a></p>
+            <p>A <em>capture the flag</em> (CTF) is a cybersecurity competition, where teams compete to solve as many challenges as they can, as fast as possible.</p>
+            <p>Challenges range across several categories, such as crypto(graphy), reverse engineering, and web exploitation.</p>
+            <p>Wikipedia explains it better than I can <a href="https://en.wikipedia.org/wiki/Capture_the_flag_(cybersecurity)">here</a>.</p>
         </section>
 
         <section class="card large" id="getting-started">
