Add more tools on the home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,10 @@
             <h2 id="tools">Tools</h2>
             <ul>
                 <li><a href="https://gchq.github.io/CyberChef">CyberChef</a> &mdash; The Swiss Army knife of cybersecurity tools</li>
+                <li><a href="https://dcode.fr/en">dCode</a> &mdash; A great tool with solvers for many common ciphers</li>
+                <li><a href="https://github.com/NationalSecurityAgency/ghidra">Ghidra</a> &mdash; The industry standard tool for reverse engineering developed by the NSA (Yes, that NSA!)</li>
+                <li><a href="https://portswigger.net/burp/communitydownload">Burp Suite</a> &mdash; A great web penetration testing framework</li>
+
             </ul>
         </section>
 
