--- a/static/css/index.css
+++ b/static/css/index.css
@@ -23,6 +23,10 @@ main p:last-child {
     margin-bottom: 0em;
 }
 
+main ul {
+    text-align: initial; /* Reset text alignment */
+}
+
 /* Card types */
 .large {
     flex: 6 1 20em;
