Clarify points accrued statistic on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                 <li>{{ stats["challenges"] }} challenges</li>
                 <li>{{ stats["solves"] }} solves</li>
                 <li>{{ stats["players"] }} players</li>
-                <li>{{ stats["points"] }} points (total)</li>
+                <li>{{ stats["points"] }} points (accrued)</li>
             </ul>
         </section>
 
