--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,8 @@
                 <li>{{ stats["challenges"] }} challenges</li>
                 <li>{{ stats["solves"] }} solves</li>
                 <li>{{ stats["players"] }} players</li>
-                <li>{{ stats["points"] }} points (accrued)</li>
+                <li>{{ stats["points"]["accrued"] }} points (accrued)</li>
+                <li>{{ stats["points"]["available"] }} points (available)</li>
             </ul>
         </section>
 
