Use message flashing in `unauthorised_handler`
This fixes an issue, where loading the challenges page whilst
unauthenticated served the login page, yet the navigation bar highlights
"Challenges". We now correctly redirect to the login page, using message
flashing to show the alert.

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js" defer></script>    <!-- as lazy as normal alerts, better than you could make them yourself -->
 
     <script src="{{ url_for('static', filename='js/utils.js') }}" defer></script>
-    <script {% if login_msg %} data-login_msg {% endif %}
+    <script data-messages='{{ get_flashed_messages() | tojson }}'
         src="{{ url_for('static', filename='js/login.js') }}" defer></script>
 {% endblock %}
 
