Add link to github, and GNU affero license

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,6 +100,6 @@
     </div>
 
     <footer>
-        <p>©Ning, Alex, Andrew, 2024</p>
+        <p>©Ning, Alex, Andrew, 2024 <a href="https://github.com/SaintNong/SaintCTF/" style="position: absolute; right: 1em;">Source</a></p>
     </footer>
 {% endblock %}
