--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -54,7 +54,7 @@
 
             <h2>Flag Submission</h2>
             <!-- Flag submission form -->
-            <form action="/submit-flag" id="flag-form" method="post">
+            <form action="/submit-flag" class="flag-form" id="flag-form" method="post">
                 <input type="text" id="flag" name="flag" placeholder="saint{EXAMPLE_FLAG}">
                 <input type="submit" value="Submit Flag">
 
