Add clarifying message about challenge completion
During the rollout of the CTF to other users, we noticed that challenges
were mainly completed in sequential order - this message encourages
players to try a wider range of challenges.

--- a/templates/index.html
+++ b/templates/index.html
@@ -108,6 +108,8 @@
                 </section>
 
             </main>
+
+            <p>Complete challenges in any order to gain points and make it to the top of the <a href="{{ url_for('leaderboard') }}">leaderboard</a>!</p>
         </section>
 
     </div>
