Make help card challenge filter tags clickable

--- a/templates/index.html
+++ b/templates/index.html
@@ -88,8 +88,8 @@
 
                             <div class="info-block">
                                 <div class="filter-tags">
-                                    <a class="filter-tag" href="javascript:void(0);" data-filter-type="difficulty" title="Filter by difficulty">easy</a>
-                                    <a class="filter-tag" href="javascript:void(0);" data-filter-type="category" title="Filter by category">category</a>
+                                    <a class="filter-tag" href="javascript:void(0);" id="difficulty-tag" title="Filter by difficulty">easy</a>
+                                    <a class="filter-tag" href="javascript:void(0);" id="category-tag" title="Filter by category">category</a>
                                 </div>
                                 <p class="points">20 points</p>
                             </div>
